# uGuru

./: README.md  test
client/csharp/: uGuru.sln
client/csharp/Controls/: Controls.csproj  CustomListView.Designer.cs  CustomListView.cs
client/csharp/Controls/Properties/: AssemblyInfo.cs
client/csharp/Demo/: Demo.csproj  FormNode.Designer.cs  FormNode.cs  FormUIDemo.Designer.cs  FormUIDemo.cs  Program.cs
client/csharp/Demo/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
client/csharp/Network/: Network.csproj  XTClient.cs  XTConfig.cs  XTHost.cs  XTNode.cs  XTServer.cs  XTService.cs  XTTransfer.cs  default.xml  nodes.xml
client/csharp/Network/Properties/: AssemblyInfo.cs
client/csharp/uGuru/: Node.cs  Request.cs  Solver.cs  SolverTable.cs  Task.cs  uGuru.cs  uGuru.csproj
client/csharp/uGuru/Properties/: AssemblyInfo.cs
part/: Makefile  main.c  mg_config.c  mg_config.h  mg_debug.h  mg_defs.h  mg_file.c  mg_file.h  mg_md5.c  mg_md5.h  mg_mime.c  mg_mime.h  mg_option.c  mg_option.h  mg_pthread.c  mg_pthread.h  mg_socket.c  mg_socket.h  mg_ssl.c  mg_ssl.h  mg_string.c  mg_string.h  mg_time.c  mg_time.h  mg_version.c  mg_version.h  mongoose.c  mongoose.lib
part/chat/: Makefile  chat.c
uGuru/: CMakeLists.txt  Makefile  build.bat  config.xml  go.bat  solver.xml  start.bat  stop.bat  submit.xml
uGuru/client/: client.h
uGuru/doc/: Doxyfile  Makefile
uGuru/include/: base64.h  config.h  datetime.h  download.h  global.h  log.h  mongoose.h  node.h  pipe.h  request.h  solver.h  statistic.h  sysinfo.h  taskman.h
uGuru/res/: res.rc
uGuru/sqlite/: Makefile
uGuru/src/: CMakeLists.txt  base64.cpp  config.cpp  datetime.cpp  download.c  global.cpp  log.cpp  main.c  mongoose.c  node.cpp  pipe.cpp  request.cpp  solver.cpp  statistic.cpp  sysinfo.cpp  taskman.cpp
uGuru/test/: CMakeLists.txt  Makefile  test_global.cpp  test_tinyxml.cpp
uGuru/tinyxml/: CMakeLists.txt  tinyxmlparser.cpp
uGuru/winhttp/: Makefile  test_winhttp.cpp  winhttp.h
uGuru/working/: action.html  config.html  detail.html  index.html  info.html  intro.html  log.html  man.html  menu.html  server.xml  solver.html  state.html  task.html
uGuru/working/Blue/: BlueStyle.css  Thumbs.db
uGuru/working/WebOS/: index.html.html
uGuru/working/css/: layout.css  main.css
uGuru/working/js/: taskmenu.js
