#-----------------------------------------------------------------------------
# 
#-----------------------------------------------------------------------------
include_directories (${UGURU_SOURCE_DIR}/tinyxml)

#-----------------------------------------------------------------------------
# 
#-----------------------------------------------------------------------------
SET (TI_TEST_SRCS test_tinyxml.cpp)

#-----------------------------------------------------------------------------
# 
#-----------------------------------------------------------------------------
add_executable (test_tinyxml ${TI_TEST_SRCS}) 

target_link_libraries (test_tinyxml tinyxml)
