#-----------------------------------------------------------------------------
# 
#-----------------------------------------------------------------------------
include_directories (${UGURU_SOURCE_DIR}/tinyxml)

#-----------------------------------------------------------------------------
# 
#-----------------------------------------------------------------------------
SET (TINYXML_SRCS tinystr.cpp tinyxml.cpp tinyxmlerror.cpp tinyxmlparser.cpp)

#-----------------------------------------------------------------------------
# 
#-----------------------------------------------------------------------------
add_library (tinyxml ${TINYXML_SRCS}) 

